--- a/codigo/onde.html
+++ b/codigo/onde.html
@@ -16,6 +16,18 @@
                 <img src="/img/logo.png" alt="">
             </a>
         </div>
+
+        <div class="icon">
+            <button class="buton"><img src="/img/menu-suspenso.png" alt=""></button>
+            <div class="icon-drop">
+              <a href="/index.html">HOME</a>
+              <a href="/codigo/cardapio.html">CARDÁPIO</a>
+              <a href="/codigo/onde.html">ONDE ESTAMOS</a>
+              <a href="/codigo/sobre.html">SOBRE</a>
+              
+            </div>
+          </div>
+
         <div class="menu">
             <nav>
                 <ul >
@@ -59,7 +71,7 @@
             <p class="links">
                 <a class="link-1" href="">Ir ao topo</a>
                 <a href="/codigo/sobre.html">Sobre nós</a>
-                <a href="#">Contato</a>
+                <a href="/codigo/contato.html">Contato</a>
             </p>
 
             <p>Foletto Gelato & Café&copy; 2022</p>
